# jim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _zensical_build.toml  index.html  mkdocs.yml  pyproject.toml  readthedocs.yml  test_gradient.py  versions.json  zensical.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: CD.yml  CI.yml  docs.yml
containers/: Containerfile.cpu  Containerfile.cuda
development/: .gitignore  404.html  gen_api.py  index.html  objects.inv  search.json  sitemap.xml
development/FAQ/: index.html
development/contributing/: index.html
development/guides/: index.html
development/installation/: index.html
development/javascripts/: mermaid.js
development/quickstart/: index.html
development/tutorials/: index.html
docs/: FAQ.md  changelog.md  contributing.md  gen_api.py  gen_ref_pages.py  gotchas.md  index.md  installation.md  quickstart.md  requirements.txt
docs/dev/: blackjax_followups.md
docs/guides/: api_level.md  cli.md  index.md  likelihood.md  prior.md  samplers.md  transforms.md
docs/stylesheets/: extra.css
docs/tutorials/: anatomy_of_jim.md  data.md  getting_started.ipynb  getting_started.md  getting_started.py  gw150914_cli.md  index.md  likelihood.md  prior.md  single_event_PE.md  transforms.md
example/: GW150914.py  GW150914_IMRPhenomPV2.py  GW150914_blackjax.py  GW150914_like_injection_Pv2.py  GW170817.py  GW170817_IMRPhenomPV2.py  GW170817_injection_multiband.py  GW170817_multiband.py  README_blackjax.md  injection.py  workbench.py  workbench_bilby.py
example/injections/: blackjax_ns.py  injection_blackjax.py  injection_recovery.py  utils.py
examples/: .gitignore  GW150914.py  GW150914_NSS.py  GW150914_NS_AW.py  GW150914_SMC.py  GW150914_flowMC.py  GW170817.py  GW170817_heterodyne.py  GW170817_injection_multiband.py  GW170817_multiband.py  injection.py
examples/cli/: GW150914_flowmc.toml  README.md  (+1 more)
joss/: paper.bib  paper.md
latest/: 404.html  index.html  sitemap.xml
stable/: 404.html  index.html  sitemap.xml
test/: benchmark_likelihood.py
tests/: utils.py
(+183 files in other folders)
