[project]
name = "jimgw"
version = "0.3.0"
description = "Gravitatioanl wave data analysis tool in Jax"
readme = "README.md"
requires-python = ">=3.14.3"
authors = [
	{name = "Kaze W. K. Wong", email = "kazewong.physics@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
    "astropy>=7.2.0",
    "beartype>=0.22.9",
    "flowmc>=0.4.5",
    "gwpy>=3.0.14",
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.7",
    "ripplegw>=0.0.9",
]

[project.optional-dependencies]
visualize = [
    "corner>=2.2.3",
    "matplotlib>=3.10.8",
]
docs = [
    "mkdocs-gen-files==0.6.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.3",
    "pymdown-extensions==10.20.1",
]
cuda = [
    "jax[cuda]>=0.9.0.1",
]
dagster = [
    "dagster>=1.12.14",
    "dagster-dg-cli>=1.12.14",
    "dagster-pipes>=1.12.14",
    "dagster-webserver>=1.12.14",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "coverage>=7.7.0",
    "coveralls>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.2",
    "pyright>=1.1.402",
]

[tool.uv.sources]
jimgw = { workspace = true }

[tool.dagster]
modules = [
{ type="module", name="jim_dagster.InjectionRecovery.definitions" },
{ type="module", name="jim_dagster.RealDataCatalog.definitions" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["tests/integration", "tests/cross_validation"]

[tool.pyright]
include = ["src"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\. )?abstractmethod",
]
